# verbose

./: .gitignore  Cargo.toml  README.md  chien
.github/workflows/: rust.yml
src/: main.rs
src/compiler/: mod.rs
src/lexer/: mod.rs  token_tree.rs
src/parser/: mod.rs  token_precedence.rs
src/vm/: instruction_debugger.rs  mod.rs
verbose_tests/: test_array.vb  test_bug_mystere.vb  test_clock_100_000.vb  test_erreur.vb  test_erreur_lexer.vb  test_erreur_parser.vb  test_fibo.vb  test_if.vb  test_if_variable.vb  test_loop.vb  test_math_simple.vb  test_modulo.vb  test_nombres_premiers.vb  test_plus_grand_plus_petit_egal.vb  test_premiers.vb  test_print.vb  test_si_sinon.vb  test_string_add.vb  test_syntaxe.vb  test_variable_1.vb  test_vaut.vb  test_veracite.vb  test_while.vb
